argo/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflow

spec:
  entryPoints:
    - websecure
  tls:
    secretName: argo-workflow-tls
  routes:
    - kind: Rule
      match: Host(`workflow.toki317.dev`)
      middlewares:
        - name: auth-toki317-dev-admin
          namespace: auth
        - name: auth-toki317-dev
          namespace: auth
      services:
        - kind: Service
          namespace: argo
          name: argo-server
          port: 2746
          scheme: http
          strategy: RoundRobin
          weight: 1
